--- a/.github/workflows/dingtalk.yml
+++ b/.github/workflows/dingtalk.yml
@@ -5,19 +5,19 @@ on:
   schedule:
   - cron: "30 1 * * *"
 
-  jobs:
-    build:
+jobs:
+  dingtalk:
 
-      runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-      strategy:
-        matrix:
-          node-version: [14.x]
+    strategy:
+      matrix:
+        node-version: [14.x]
 
-      steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm run dingtalk
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - run: npm run dingtalk
