--- a/.github/workflows/dingtalk5.yml
+++ b/.github/workflows/dingtalk5.yml
@@ -1,4 +1,4 @@
-name: Push to DingTalk4
+name: Push to DingTalk V5
 
 on:
   workflow_dispatch:
@@ -7,15 +7,9 @@ on:
         description: 'Log level'
         required: true
         default: 'warning'
-      tags:
-        description: 'Test scenario tags'
-  push:
-    branches: [ $default-branch ]
-  # 每天早上 1点30分 拉取最新数据
+  # 每天早上 2点（东8区，所以需要-8小时，为 18 ） 拉取最新数据
   schedule:
-  # - cron: "30 1 * * *"
-  # 每分钟执行，用于测试
-  - cron: "*/1 * * * *"
+  - cron: "0 18 * * *"
 
 jobs:
   dingtalk:
