--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "start": "npm run dingtalk",
     "dingtalk": "node src/dingtalk.js",
+
+    "local:proxy": "tnpx hpts -s 127.0.0.1:13659 -p 8080",
+    "test:dingtalk": "node -r dotenv/config src/dingtalk.js",
+    "test:sheet": "node -r dotenv/config test/sheet.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,8 +24,14 @@
   },
   "homepage": "https://github.com/zhoukekestar/sz-real-estate-actions#readme",
   "dependencies": {
+    "fetch-with-proxy": "^2.0.1",
+    "googleapis": "^61.0.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
     "node-fetch": "^2.6.1"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0"
   }
 }
