--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "start": "npm run dingtalk",
     "dingtalk": "node src/dingtalk.js",
-
     "local:proxy": "tnpx hpts -s 127.0.0.1:13659 -p 8080",
     "test:dingtalk": "node -r dotenv/config src/dingtalk.js",
     "test:sheet": "node -r dotenv/config test/sheet.js",
+    "test:sheet-v2": "node -r dotenv/config test/sheet-v2.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,9 +26,11 @@
   "dependencies": {
     "fetch-with-proxy": "^2.0.1",
     "googleapis": "^61.0.0",
+    "jsdom": "^16.4.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "sanitize-html": "^2.3.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
